<resources>
    <string name="app_name">StephaneSchenkelCryptoMonnaies</string>
    <string name="addCrypto">Ajouter des crypto-monnaies</string>
    <string name="listCrypto">Lister mes crypto-monnaies</string>
    <string name="code">Code :</string>
    <string name="nom">Nom :</string>
    <string name="taux">Taux :</string>
    <string name="montant">Montant :</string>
    <string name="ajouter">Ajouter</string>
    <string name="montant_en_eur">Montant en EUR :</string>
    <string name="supprimer">Supprimer</string>
    <string name="modifier">Modifier</string>
</resources>
